fixed navbar items alignment as in figma #1

--- a/resources/css/landingpage.css
+++ b/resources/css/landingpage.css
@@ -1,7 +1,6 @@
 html,
 body {
     margin: 0px;
-    margin-top: 3px;
     width: 100%;
 }
 
@@ -93,13 +92,13 @@ body {
     left: 0px;
     top: 0px;
     z-index: -1;
-    background: rgba(62, 95, 79, 0.4);
     backdrop-filter: blur(32px);
 }
 
 
 nav {
     z-index: 100;
+    background: rgba(62, 95, 79, 0.4);
     display: flex;
     padding: 0% 0%;
     justify-content: space-between;
@@ -107,7 +106,6 @@ nav {
 }
 
 #logo1 {
-    position: absolute;
     padding-left: 20px;
     height: 40px;
     top: 10px;
@@ -115,26 +113,28 @@ nav {
 
 .main-nav {
     flex: 1;
-    text-align: left;
+    text-align: right;
 }
 
 .main-nav ul {
-    padding-right: 20px;
+    padding-right: 40px;
 }
 
 .main-nav ul li {
     list-style: none;
     display: inline-block;
-    padding: 0px 10px;
+    padding: 0px 20px;
     position: relative;
 }
 
 #li3 {
     list-style: none;
     display: inline-block;
-    padding: 0px 10px;
+    padding: 10px 20px;
+    margin-left: 10px;
     position: relative;
     background: #01AF57;
+    border-radius: 3px;
 }
 
 .main-nav ul li a {
